@@ -1757,4 +1757,10 @@
 
 /^(?<!(?=􃡜))/B,utf
 
+# Horizontal and vertical space lists ignore caseless
+
+/[\HH]/Bi,utf
+
+/[^\HH]/Bi,utf
+
 # End of testinput5 
